Album pane working